// Dungeon Train — Minecraft mod (NeoForge 1.21.1).
// MIGRATION PHASE 2: physics dependency is Sable (PolyForm Shield 1.0.0).
// See plans/modular-scribbling-thunder.md for the Phase 2 migration plan.

plugins {
    id 'java-library'
    id 'maven-publish'
    id 'idea'
    id 'net.neoforged.moddev' version '2.0.141'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

// Mojang ships Java 21 to end users in 1.21.1, so mods target Java 21.
java.toolchain.languageVersion = JavaLanguageVersion.of(21)

sourceSets.main.resources {
    srcDir 'src/generated/resources'
    exclude '**/*.bbmodel'
    exclude 'src/generated/**/.cache'
}

repositories {
    // Maven Central for general libs (joml-primitives, JUnit).
    mavenCentral()

    // Modrinth — hosts Sable's mod jars. Sable does not publish to a dedicated
    // Maven, so we pull via Modrinth's Maven proxy (api.modrinth.com/maven).
    maven {
        name = 'Modrinth'
        url = 'https://api.modrinth.com/maven'
        content {
            includeGroup 'maven.modrinth'
        }
    }
}

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = 'gameTestServer'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all',
                '--output', file('src/generated/resources/').getAbsolutePath(),
                '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet sourceSets.main
        }
    }

    unitTest {
        enable()
        testedMod = mods.named(mod_id)
    }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime

    // Sable bundles its `sable-companion` library as a jar-in-jar inside the
    // mod jar (META-INF/jarjar/sable-companion-common-*.jar). At runtime
    // NeoForge unpacks and loads it; at compile time we have to extract it
    // ourselves so the companion's math types (Pose3d, BoundingBox3d) are
    // visible to javac.
    sableJar
}

dependencies {
    sableJar "maven.modrinth:sable:${sable_version}"
}

tasks.register('extractSableCompanion', Copy) {
    def sableJar = configurations.sableJar
    inputs.files(sableJar)
    from {
        sableJar.collect { zipTree(it).matching {
            include 'META-INF/jarjar/sable-companion-common-*.jar'
        } }
    }
    into layout.buildDirectory.dir('extracted/sable-companion')
    eachFile { details ->
        // Strip the META-INF/jarjar/ prefix so files() can pick the jar up directly.
        details.path = details.sourceName
    }
    includeEmptyDirs = false
}

dependencies {
    // joml-primitives supplies AABBdc used by ManagedShip.worldAABB().
    // Pre-migration this came in transitively via VS jar-in-jar; with VS
    // stubbed we add it ourselves. `additionalRuntimeClasspath` is needed in
    // addition to compile/runtime so it lands on the moddev launch classpath
    // (runClient / runServer); plain `runtimeOnly` is not enough there.
    // `jarJar` embeds it in the shipped mod jar for end-user production builds.
    compileOnly 'org.joml:joml-primitives:1.10.0'
    additionalRuntimeClasspath 'org.joml:joml-primitives:1.10.0'
    jarJar(group: 'org.joml', name: 'joml-primitives', version: '[1.10.0,2.0)') {
        version {
            prefer '1.10.0'
        }
    }

    // Sable — physics dependency (replaces VS in Phase 2). Modrinth-hosted.
    // End users must install Sable separately at runtime; it is NOT embedded
    // in our jar (PolyForm Shield 1.0.0 — Sable's licence — does not allow
    // bundling), and we declare it as a hard `mandatory` mod-dep in
    // neoforge.mods.toml so the loader prompts the user.
    implementation "maven.modrinth:sable:${sable_version}"

    // Compile against the companion math types extracted from Sable's
    // jar-in-jar bundle. compileOnly because at runtime the companion is
    // loaded by NeoForge from Sable's own jarJar — we don't ship it.
    // fileTree (not files-of-task) so javac sees the .jar inside the
    // directory; builtBy wires the extraction so it runs before compile.
    compileOnly fileTree(dir: layout.buildDirectory.dir('extracted/sable-companion'),
                         include: '*.jar',
                         builtBy: ['extractSableCompanion'])

    // Unit tests — JUnit 5 Jupiter (pure-logic only).
    testImplementation platform('org.junit:junit-bom:5.10.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test', Test).configure {
    useJUnitPlatform()
    testLogging {
        events 'passed', 'skipped', 'failed'
    }
}

// Resolve the current git branch at configuration time so it can be baked into
// the jar via processResources. Falls back to the short SHA on detached HEAD.
//
// Strict branch-ref detection: only the literal `main` ref counts as a release
// build. Worktrees / feature branches that sit at main's tip with no extra
// commits still bake their own branch name and therefore show the dev title
// screen (see DevQuickWorldHandler). The branch ref — not the commit hash — is
// the dev-vs-release signal.
def gitBranch = { ->
    try {
        def proc = ['git', 'rev-parse', '--abbrev-ref', 'HEAD']
                .execute(null, project.projectDir)
        proc.waitForOrKill(5000)
        def name = proc.in.text.trim()
        if (name == 'HEAD' || name.isEmpty()) {
            def p2 = ['git', 'rev-parse', '--short', 'HEAD']
                    .execute(null, project.projectDir)
            p2.waitForOrKill(5000)
            def sha = p2.in.text.trim()
            return sha ?: 'unknown'
        }
        return name
    } catch (Exception e) {
        logger.warn("Could not resolve git branch for version resource: {}", e.message)
        return 'unknown'
    }
}()

// Generate neoforge.mods.toml + dungeontrain_version.properties + pack.mcmeta from templates.
tasks.register('generateModMetadata', ProcessResources) {
    var replaceProperties = [
        minecraft_version       : minecraft_version,
        minecraft_version_range : minecraft_version_range,
        neo_version             : neo_version,
        loader_version_range    : loader_version_range,
        mod_id                  : mod_id,
        mod_name                : mod_name,
        mod_license             : mod_license,
        mod_version             : mod_version,
        mod_authors             : mod_authors,
        mod_description         : mod_description,
        git_branch              : gitBranch,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from 'src/main/templates'
    into "${layout.buildDirectory.get()}/generated/sources/modMetadata"
}
sourceSets.main.resources.srcDir tasks.named('generateModMetadata')
neoForge.ideSyncTask tasks.named('generateModMetadata')

tasks.named('jar', Jar).configure {
    manifest {
        attributes([
            'Specification-Title'     : mod_id,
            'Specification-Vendor'    : mod_authors,
            'Specification-Version'   : '1',
            'Implementation-Title'    : project.name,
            'Implementation-Version'  : project.jar.archiveVersion,
            'Implementation-Vendor'   : mod_authors,
        ])
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven { url "file://${project.projectDir}/repo" }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
